# pet_adoption_api_akso/src/routes/PetRoute.ts
@@ -1,0 +1,29 @@
+import express from "express";
+import { store } from "../middlewares/multer.js";
+import {
+  petGet,
+  petUpload,
+  petDelete
+} from "../controllers/PetController.js";
+import { check } from "express-validator";
+const router = express.Router();
+
+router.route("/pets")
+.get(petGet)
+.post(
+  store.array("images", 12),
+  [
+    check("name").notEmpty().withMessage("name can't be empty"),
+    check("breed").notEmpty().withMessage("breed can't be empty"),
+    check("age").notEmpty().withMessage("age can't be empty"),
+    check("size").notEmpty().withMessage("size can't be empty"),
+    check("sex").notEmpty().withMessage("sex can't be empty"),
+    check("description").notEmpty().withMessage("description can't be empty")
+  ],
+  petUpload
+);
+
+router
+  .route("/pets/:id")
+  .delete(petDelete)
+export default router;
